--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,7 +28,7 @@ p{
 }
 
 .banner {
-  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('./assets/images/banner.png');
+  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('../images/banner.png');
   background-size: cover;
   background-repeat: no-repeat;
   height: 600px;
@@ -110,7 +110,8 @@ p{
 
 #transform-world {
   height: 560px;
-  background-image: url(./assets/images/woman-code.png);
+  height: 141px;
+  background-image: url(../images/woman-code.png);
   background-size: cover;
   background-attachment: fixed;
 
@@ -126,8 +127,8 @@ p{
   text-transform: lowercase;
   text-shadow: 3px 2px 1px #33A8DB;
 
-  width: 244px;
   height: 141px;
+  width: 244px;
 }
 
 #professional-challenges{
